[gd_scene load_steps=18 format=3 uid="uid://vxplbalqtqdq"]

[ext_resource type="Script" path="res://UI/Scripts/choix_equipements.gd" id="1_541q8"]
[ext_resource type="Texture2D" uid="uid://b02mrbqksygw4" path="res://Classes/Cra/cra.png" id="1_rmd4o"]
[ext_resource type="PackedScene" uid="uid://bw1qw1u2hkek8" path="res://UI/Displays/Scenes/affichage_budget.tscn" id="2_0eq0q"]
[ext_resource type="PackedScene" uid="uid://drtgbjheuymi7" path="res://UI/Displays/Scenes/affichage_stats_primaires.tscn" id="2_ntw62"]
[ext_resource type="PackedScene" uid="uid://5i2iaiitef1b" path="res://UI/Displays/Scenes/affichage_stats_secondaires.tscn" id="3_b8gg0"]
[ext_resource type="Texture2D" uid="uid://dyyyq4lee4opy" path="res://UI/Buttons/sort_base.png" id="5_yxd6q"]
[ext_resource type="Texture2D" uid="uid://blfi6wbstow3k" path="res://UI/Buttons/sort_clicked.png" id="6_lrtfq"]
[ext_resource type="Texture2D" uid="uid://dkldwfhfvws07" path="res://UI/Buttons/sort_hovered.png" id="7_8ayq0"]
[ext_resource type="Texture2D" uid="uid://bknc5skjp7s4v" path="res://UI/Buttons/retour_base.png" id="7_x31ic"]
[ext_resource type="Texture2D" uid="uid://dd20mihsbd7tw" path="res://UI/Buttons/retour_clicked.png" id="8_ns3p0"]
[ext_resource type="Texture2D" uid="uid://bsx000i85450y" path="res://UI/Buttons/retour_hovered.png" id="9_7hgve"]
[ext_resource type="Texture2D" uid="uid://rvet1iae41uh" path="res://UI/Displays/arme.png" id="10_76v4w"]
[ext_resource type="Texture2D" uid="uid://c8n8qjox2fgp" path="res://UI/Displays/familier.png" id="11_h64ke"]
[ext_resource type="Texture2D" uid="uid://bt3qxdwhx6um7" path="res://UI/Displays/coiffe.png" id="12_2rfh5"]
[ext_resource type="Texture2D" uid="uid://0n3t44ymntgy" path="res://UI/Displays/cape.png" id="13_0nfer"]
[ext_resource type="Texture2D" uid="uid://waunvw4s276c" path="res://UI/Displays/dofus.png" id="14_raq4t"]
[ext_resource type="Texture2D" uid="uid://d01gd7feyawpv" path="res://Equipements/Armes/arc_ange.png" id="15_7m0r2"]

[node name="ChoixEquipements" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_541q8")

[node name="Background" type="ColorRect" parent="."]
offset_left = -80.0
offset_top = -73.0
offset_right = 1683.0
offset_bottom = 965.0
color = Color(0.529412, 0.478431, 0.317647, 1)

[node name="Personnage" type="TextureRect" parent="."]
offset_left = 93.0
offset_top = 7.0
offset_right = 163.0
offset_bottom = 135.0
texture = ExtResource("1_rmd4o")

[node name="AffichageStatsPrimaires" parent="." instance=ExtResource("2_ntw62")]
offset_top = 66.0
offset_right = 250.0
offset_bottom = 177.0

[node name="AffichageStatsSecondaires" parent="." instance=ExtResource("3_b8gg0")]
offset_top = 177.0
offset_right = 248.0
offset_bottom = 630.0

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 30.0
offset_top = 693.0
offset_right = 160.0
offset_bottom = 797.0
scale = Vector2(1.5, 1.5)

[node name="Sorts" type="TextureButton" parent="GridContainer"]
offset_right = 130.0
offset_bottom = 32.0
texture_normal = ExtResource("5_yxd6q")
texture_pressed = ExtResource("6_lrtfq")
texture_hover = ExtResource("7_8ayq0")

[node name="Retour" type="TextureButton" parent="GridContainer"]
offset_top = 36.0
offset_right = 130.0
offset_bottom = 68.0
texture_normal = ExtResource("7_x31ic")
texture_pressed = ExtResource("8_ns3p0")
texture_hover = ExtResource("9_7hgve")

[node name="Slots" type="GridContainer" parent="."]
offset_left = 750.0
offset_top = 50.0
offset_right = 1100.0
offset_bottom = 105.0
theme_override_constants/h_separation = 20
columns = 5

[node name="TextureButton" type="TextureButton" parent="Slots"]
offset_right = 54.0
offset_bottom = 54.0
texture_normal = ExtResource("10_76v4w")

[node name="TextureButton2" type="TextureButton" parent="Slots"]
offset_left = 74.0
offset_right = 128.0
offset_bottom = 54.0
texture_normal = ExtResource("11_h64ke")

[node name="TextureButton3" type="TextureButton" parent="Slots"]
offset_left = 148.0
offset_right = 202.0
offset_bottom = 54.0
texture_normal = ExtResource("12_2rfh5")

[node name="TextureButton4" type="TextureButton" parent="Slots"]
offset_left = 222.0
offset_right = 276.0
offset_bottom = 54.0
texture_normal = ExtResource("13_0nfer")

[node name="TextureButton5" type="TextureButton" parent="Slots"]
offset_left = 296.0
offset_right = 350.0
offset_bottom = 54.0
texture_normal = ExtResource("14_raq4t")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 380.0
offset_top = 150.0
offset_right = 1749.0
offset_bottom = 898.0
scale = Vector2(0.8, 0.8)

[node name="Cartes" type="GridContainer" parent="ScrollContainer"]
offset_right = 1361.0
offset_bottom = 1876.0
columns = 5

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_right = 269.0
offset_bottom = 372.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton2" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 273.0
offset_right = 542.0
offset_bottom = 372.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton3" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 546.0
offset_right = 815.0
offset_bottom = 372.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton4" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 819.0
offset_right = 1088.0
offset_bottom = 372.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton5" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 1092.0
offset_right = 1361.0
offset_bottom = 372.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton6" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_top = 376.0
offset_right = 269.0
offset_bottom = 748.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton7" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 273.0
offset_top = 376.0
offset_right = 542.0
offset_bottom = 748.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton8" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 546.0
offset_top = 376.0
offset_right = 815.0
offset_bottom = 748.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton9" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 819.0
offset_top = 376.0
offset_right = 1088.0
offset_bottom = 748.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton10" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 1092.0
offset_top = 376.0
offset_right = 1361.0
offset_bottom = 748.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton11" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_top = 752.0
offset_right = 269.0
offset_bottom = 1124.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton12" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 273.0
offset_top = 752.0
offset_right = 542.0
offset_bottom = 1124.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton13" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 546.0
offset_top = 752.0
offset_right = 815.0
offset_bottom = 1124.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton14" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 819.0
offset_top = 752.0
offset_right = 1088.0
offset_bottom = 1124.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton15" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 1092.0
offset_top = 752.0
offset_right = 1361.0
offset_bottom = 1124.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton16" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_top = 1128.0
offset_right = 269.0
offset_bottom = 1500.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton17" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 273.0
offset_top = 1128.0
offset_right = 542.0
offset_bottom = 1500.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton18" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 546.0
offset_top = 1128.0
offset_right = 815.0
offset_bottom = 1500.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton19" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 819.0
offset_top = 1128.0
offset_right = 1088.0
offset_bottom = 1500.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton20" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 1092.0
offset_top = 1128.0
offset_right = 1361.0
offset_bottom = 1500.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton21" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_top = 1504.0
offset_right = 269.0
offset_bottom = 1876.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton22" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 273.0
offset_top = 1504.0
offset_right = 542.0
offset_bottom = 1876.0
texture_normal = ExtResource("15_7m0r2")

[node name="TextureButton23" type="TextureButton" parent="ScrollContainer/Cartes"]
offset_left = 546.0
offset_top = 1504.0
offset_right = 815.0
offset_bottom = 1876.0
texture_normal = ExtResource("15_7m0r2")

[node name="AffichageBudget" parent="." instance=ExtResource("2_0eq0q")]
offset_left = 826.0
offset_right = 1023.0

[connection signal="pressed" from="GridContainer/Sorts" to="." method="_on_sorts_pressed"]
[connection signal="pressed" from="GridContainer/Retour" to="." method="_on_retour_pressed"]
